--- a/styles.css
+++ b/styles.css
@@ -39,20 +39,20 @@ body {
 }
 input{
     outline: none;
-    width: 21vw;
+    width: 70%;
     padding: 15px;
     margin: 0 auto;
     color: rgba(255, 255, 255,0.8);
     border:1px solid rgb(255, 255, 255);
     border-radius: 0.4rem;
     background: transparent;
+    box-sizing: border-box;
 }
 input::placeholder{
     color: rgba(255, 255, 255,0.8);
 }
 button{
-    width: 7vw;
-    padding: 12px;
+    padding: 12px 25px;
     border-radius: 0.2rem;
     border: 0;
     margin: 0 auto;
@@ -60,4 +60,17 @@ button{
     background-color: #1fd1f9;
     background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
     transition: 0.2;
+}
+@media screen and (max-width: 700px) {
+    .main{
+        width: 65vw;
+    }
+    input{
+        padding: 11px;
+    }
+    button{
+        padding: 7px 15px;
+    }
+
+
 }
